--- a/committee.html
+++ b/committee.html
@@ -96,7 +96,7 @@
                     <a href="https://www.isical.ac.in/~bbc/" class="member-link">
                         <div class="member-name">Prof. B. B. Chaudhuri</div>
                     </a>
-                    <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India [cite: 5]</div>
+                    <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India </div>
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
                     <a href="https://www.cse.msu.edu/~jain/" class="member-link">
                         <div class="member-name">Prof. Anil K Jain</div>
                     </a>
-                    <div class="member-affil">Michigan State University, USA [cite: 16]</div>
+                    <div class="member-affil">Michigan State University, USA </div>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                     <a href="https://nitc.ac.in/director" class="member-link">
                         <div class="member-name">Prof. Prasad Krishna</div>
                     </a>
-                    <div class="member-affil">Director, NIT Calicut, India [cite: 19]</div>
+                    <div class="member-affil">Director, NIT Calicut, India </div>
                 </div>
             </div>
             <div class="member-card">
@@ -135,7 +135,7 @@
                     <a href="https://www.iitr.ac.in/mvlab/people.html" class="member-link">
                         <div class="member-name">Prof. R. Balasubramanian</div>
                     </a>
-                    <div class="member-affil">IIT Roorkee, India [cite: 20]</div>
+                    <div class="member-affil">IIT Roorkee, India </div>
                 </div>
             </div>
             <div class="member-card">
@@ -144,7 +144,7 @@
                     <a href="https://www.ee.iitm.ac.in/raju/" class="member-link">
                         <div class="member-name">Prof. A. N. Rajagopalan</div>
                     </a>
-                    <div class="member-affil">IIT Madras, India [cite: 21]</div>
+                    <div class="member-affil">IIT Madras, India </div>
                 </div>
             </div>
         </div>
@@ -157,151 +157,151 @@
             <div class="member-card">
                 <img src="assets/images/Amina.jpg" alt="Dr. Amina Bassit" class="member-photo">
                 <div class="member-name">Dr. Amina Bassit</div>
-                <div class="member-affil">Michigan State University, USA [cite: 74]</div>
+                <div class="member-affil">Michigan State University, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Chiara.jpg" alt="Prof. Chiara Galdi" class="member-photo">
                 <div class="member-name">Prof. Chiara Galdi</div>
-                <div class="member-affil">Eurecom, France [cite: 75]</div>
+                <div class="member-affil">Eurecom, France </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Marta.jpg" alt="Prof. Marta Gomez-Barrero" class="member-photo">
                 <div class="member-name">Prof. Marta Gomez-Barrero</div>
-                <div class="member-affil">Universität der Bundeswehr München, Germany [cite: 76]</div>
+                <div class="member-affil">Universität der Bundeswehr München, Germany </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Amitesh.jpg" alt="Dr. Amitesh Rajput" class="member-photo">
                 <div class="member-name">Dr. Amitesh Rajput</div>
-                <div class="member-affil">NLIU, Bhopal, India [cite: 77]</div>
+                <div class="member-affil">NLIU, Bhopal, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/DeepakKJain.jpg" alt="Dr. Deepak K Jain" class="member-photo">
                 <div class="member-name">Dr. Deepak K Jain</div>
-                <div class="member-affil">Dalian University of Technology, China [cite: 78]</div>
+                <div class="member-affil">Dalian University of Technology, China </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Prashant.jpg" alt="Dr. Prashant Patil" class="member-photo">
                 <div class="member-name">Dr. Prashant Patil</div>
-                <div class="member-affil">IIT Guwahati, India [cite: 79]</div>
+                <div class="member-affil">IIT Guwahati, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Pushpendra.jpg" alt="Dr. Pushpendra Kumar" class="member-photo">
                 <div class="member-name">Dr. Pushpendra Kumar</div>
-                <div class="member-affil">MANIT Bhopal, India [cite: 80]</div>
+                <div class="member-affil">MANIT Bhopal, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Vivekraj.jpg" alt="Dr. Vivekraj V. K." class="member-photo">
                 <div class="member-name">Dr. Vivekraj V. K.</div>
-                <div class="member-affil">IIT Dharwad, India [cite: 81]</div>
+                <div class="member-affil">IIT Dharwad, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Harkeerat.jpg" alt="Dr. Harkeerat Kaur" class="member-photo">
                 <div class="member-name">Dr. Harkeerat Kaur</div>
-                <div class="member-affil">IIT Jammu, India [cite: 82]</div>
+                <div class="member-affil">IIT Jammu, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Kesavadas.jpg" alt="Dr. C. Kesavadas" class="member-photo">
                 <div class="member-name">Dr. C. Kesavadas</div>
-                <div class="member-affil">SCTIMST, Thiruvananthapuram, India [cite: 83]</div>
+                <div class="member-affil">SCTIMST, Thiruvananthapuram, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Senthil.jpg" alt="Dr. C. M. Senthil Kumar" class="member-photo">
                 <div class="member-name">Dr. C. M. Senthil Kumar</div>
-                <div class="member-affil">ICAR - IISR, Kozhikode, India [cite: 84]</div>
+                <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/IshwaraBhat.jpg" alt="Dr. A. Ishwara Bhat" class="member-photo">
                 <div class="member-name">Dr. A. Ishwara Bhat</div>
-                <div class="member-affil">ICAR - IISR, Kozhikode, India [cite: 85]</div>
+                <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Lijiya.jpg" alt="Dr. Lijiya A" class="member-photo">
                 <div class="member-name">Dr. Lijiya A</div>
-                <div class="member-affil">NIT Calicut, India [cite: 86]</div>
+                <div class="member-affil">NIT Calicut, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/Nisanth.jpg" alt="Dr. Mukku Nisanth Kumar" class="member-photo">
                 <div class="member-name">Dr. Mukku Nisanth Kumar</div>
-                <div class="member-affil">IIITDM Kancheepuram, India [cite: 87]</div>
+                <div class="member-affil">IIITDM Kancheepuram, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/AnandChowdary.jpg" alt="Prof. Anand Shankar Chowdary" class="member-photo">
                 <div class="member-name">Prof. Anand Shankar Chowdary</div>
-                <div class="member-affil">Jadavpur University, India [cite: 88]</div>
+                <div class="member-affil">Jadavpur University, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/AnoopNambodiri.jpg" alt="Prof. Anoop Nambodiri" class="member-photo">
                 <div class="member-name">Prof. Anoop Nambodiri</div>
-                <div class="member-affil">IIIT Hyderabad, India [cite: 89]</div>
+                <div class="member-affil">IIIT Hyderabad, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/BapiRaju.jpg" alt="Prof. Bapi Raju" class="member-photo">
                 <div class="member-name">Prof. Bapi Raju</div>
-                <div class="member-affil">IIIT Hyderabad, India [cite: 90]</div>
+                <div class="member-affil">IIIT Hyderabad, India </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/PhilippTerhorst.jpg" alt="Prof. Philipp Terhörst" class="member-photo">
                 <div class="member-name">Prof. Philipp Terhörst</div>
-                <div class="member-affil">University of Paderborn, Germany [cite: 91]</div>
+                <div class="member-affil">University of Paderborn, Germany </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/DikshaShukla.jpg" alt="Prof. Diksha Shukla" class="member-photo">
                 <div class="member-name">Prof. Diksha Shukla</div>
-                <div class="member-affil">Wyoming University, USA [cite: 92]</div>
+                <div class="member-affil">Wyoming University, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/RajeshKumar.jpg" alt="Prof. Rajesh Kumar" class="member-photo">
                 <div class="member-name">Prof. Rajesh Kumar</div>
-                <div class="member-affil">Bucknell University, USA [cite: 93]</div>
+                <div class="member-affil">Bucknell University, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/AjitaRattani.jpg" alt="Prof. Ajita Rattani" class="member-photo">
                 <div class="member-name">Prof. Ajita Rattani</div>
-                <div class="member-affil">University of North Texas, USA [cite: 94]</div>
+                <div class="member-affil">University of North Texas, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/VijayanAsari.jpg" alt="Dr. Vijayan K Asari" class="member-photo">
                 <div class="member-name">Dr. Vijayan K Asari</div>
-                <div class="member-affil">University of Dayton, Ohio, USA [cite: 95]</div>
+                <div class="member-affil">University of Dayton, Ohio, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/JohnThomas.jpg" alt="Dr. John Thomas" class="member-photo">
                 <div class="member-name">Dr. John Thomas</div>
-                <div class="member-affil">RIT, USA [cite: 96]</div>
+                <div class="member-affil">RIT, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/HauNgo.jpg" alt="Dr. Hau Ngo" class="member-photo">
                 <div class="member-name">Dr. Hau Ngo</div>
-                <div class="member-affil">US Naval Academy, USA [cite: 97]</div>
+                <div class="member-affil">US Naval Academy, USA </div>
             </div>
 
             <div class="member-card">
                 <img src="assets/images/MaheshPanicker.jpg" alt="Prof. Mahesh Panicker" class="member-photo">
                 <div class="member-name">Prof. Mahesh Panicker</div>
-                <div class="member-affil">Singapore Institute of Technology [cite: 98]</div>
+                <div class="member-affil">Singapore Institute of Technology </div>
             </div>
         </div>
     </div>
@@ -333,3 +333,4 @@
 
 </body>
 </html>
+
