--- a/committee.html
+++ b/committee.html
@@ -103,7 +103,7 @@
                     <a href="https://www.isical.ac.in/~bbc/" class="member-link">
                         <div class="member-name">Prof. B. B. Chaudhuri</div>
                     </a>
-                    [cite_start]<div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India [cite: 5]</div>
+                    <div class="member-affil">Indian Statistical Institute (ISI), Kolkata, India </div>
                 </div>
             </div>
         </div>
@@ -550,3 +550,4 @@
 
 </body>
 </html>
+
