--- a/committee.html
+++ b/committee.html
@@ -436,7 +436,7 @@
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. Lintu Rajan</div>
                     </a>
-                    [cite_start]<div class="member-affil">NIT Calicut, India [cite: 57]</div>
+                    <div class="member-affil">NIT Calicut, India</div>
                 </div>
             </div>
             <div class="member-card">
@@ -454,7 +454,7 @@
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. C. N. Shyam Kumar</div>
                     </a>
-                    [cite_start]<div class="member-affil">National Institute of Technology Calicut, India [cite: 59]</div>
+                    <div class="member-affil">NIT Calicut, India</div>
                 </div>
             </div>
             <div class="member-card">
@@ -571,7 +571,7 @@
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. Amitesh Rajput</div>
                     </a>
-                    [cite_start]<div class="member-affil">NLIU, Bhopal, India [cite: 77]</div>
+                    <div class="member-affil">NLIU, Bhopal, India</div>
                 </div>
             </div>
             <div class="member-card">
@@ -766,66 +766,6 @@
         </div>
     </div>
 
-    <div class="committee-group">
-        <h3 class="group-title">Proposed Keynote Speakers</h3>
-        <div class="member-grid">
-            <div class="member-card">
-                <div class="member-info">
-                    <a href="https://scholar.google.com/citations?user=71qzGF8AAAAJ&hl=en" class="member-link">
-                        <div class="member-name">Prof. Jayram Udupa</div>
-                    </a>
-                    [cite_start]<div class="member-affil">University of Pennsylvania, USA [cite: 107]</div>
-                </div>
-            </div>
-            <div class="member-card">
-                <div class="member-info">
-                    <a href="https://scholar.google.com/citations?hl=fr&user=60wK2OQAAAAJ" class="member-link">
-                        <div class="member-name">Jocelyn Chanussot</div>
-                    </a>
-                    [cite_start]<div class="member-affil">Grenoble Institute of Technology, France [cite: 113]</div>
-                </div>
-            </div>
-            <div class="member-card">
-                <div class="member-info">
-                    <a href="https://scholar.google.com/citations?user=7BpMrY0AAAAJ&hl=nl" class="member-link">
-                        <div class="member-name">Prof. Raymond Veldhuis</div>
-                    </a>
-                    [cite_start]<div class="member-affil">University of Twente, Netherlands [cite: 120]</div>
-                </div>
-            </div>
-            <div class="member-card">
-                <div class="member-info">
-                    <a href="https://scholar.google.com/citations?user=hzywrFMAAAAJ&hl=en" class="member-link">
-                        <div class="member-name">Prof. Zhao</div>
-                    </a>
-                    [cite_start]<div class="member-affil">University of Oulu, Finland [cite: 126]</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="committee-group">
-        <h3 class="group-title">Industrial Talk</h3>
-        <div class="member-grid">
-            <div class="member-card">
-                <div class="member-info">
-                    <a href="https://www.linkedin.com/in/nimisha-t-m-216161110/" class="member-link">
-                        <div class="member-name">Nimisha TM</div>
-                    </a>
-                    [cite_start]<div class="member-affil">ZEISS Group, Germany [cite: 134]</div>
-                </div>
-            </div>
-            <div class="member-card">
-                <div class="member-info">
-                    <a href="https://www.linkedin.com/in/ganesanramachandran/" class="member-link">
-                        <div class="member-name">Ganesan Ramachandran</div>
-                    </a>
-                    [cite_start]<div class="member-affil">KLA Corporation [cite: 136]</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 </div>
 </section>
 
@@ -833,8 +773,8 @@
     <div class="footer-grid">
         <div class="footer-col">
             <h4>CVIP 2026</h4>
-            [cite_start]<p>NIT Calicut & NTNU Norway [cite: 3]</p>
-            [cite_start]<p>Dec 9–12, 2026 [cite: 2]</p>
+            <p>NIT Calicut & NTNU Norway</p>
+            <p>Dec 9–12, 2026</p>
         </div>
         <div class="footer-col">
             <h4>Links</h4>
