--- a/committee.html
+++ b/committee.html
@@ -296,7 +296,7 @@
         <h3 class="group-title">Sponsorship Chairs</h3>
         <div class="member-grid">
             <div class="member-card">
-                <img src="assets/images/Praveen.jpg" alt="Prof. Praveen Sankaran" class="member-photo">
+                <img src="assets/images/PraveenSankaran.jpg" alt="Prof. Praveen Sankaran" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Prof. Praveen Sankaran</div>
@@ -794,3 +794,4 @@
 
 </body>
 </html>
+
