--- a/committee.html
+++ b/committee.html
@@ -458,7 +458,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Rahul.jpg" alt="Dr. Rahul Radhakrishnan" class="member-photo">
+                <img src="assets/images/RahulRadhakrishnan .jpg" alt="Dr. Rahul Radhakrishnan" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. Rahul Radhakrishnan</div>
@@ -794,5 +794,6 @@
 
 </body>
 </html>
+
 
 
