--- a/committee.html
+++ b/committee.html
@@ -506,7 +506,7 @@
         <h3 class="group-title">Tutorial and Workshop Chairs</h3>
         <div class="member-grid">
             <div class="member-card">
-                <img src="assets/images/RahulP.jpg" alt="Dr. Rahul Prasannakumar" class="member-photo">
+                <img src="assets/images/Rahul.jpg" alt="Dr. Rahul Prasannakumar" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. Rahul Prasannakumar</div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
