--- a/committee.html
+++ b/committee.html
@@ -320,7 +320,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/ChiaraGaldi.jpg" alt="Prof. Chiara Galdi" class="member-photo">
+                <img src="assets/images/Chiara.jpg" alt="Prof. Chiara Galdi" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Prof. Chiara Galdi</div>
@@ -329,7 +329,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/MartaGomez.jpg" alt="Prof. Marta Gomez-Barrero" class="member-photo">
+                <img src="assets/images/Marta.jpg" alt="Prof. Marta Gomez-Barrero" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Prof. Marta Gomez-Barrero</div>
@@ -356,7 +356,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/RamaKrishna.jpg" alt="Prof. Rama Krishna Sai Gorthi" class="member-photo">
+                <img src="assets/images/Rama.jpg" alt="Prof. Rama Krishna Sai Gorthi" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Prof. Rama Krishna Sai Gorthi</div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
