--- a/committee.html
+++ b/committee.html
@@ -380,7 +380,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/AmiteshPublicity.jpg" alt="Dr. Amitesh Rajput" class="member-photo">
+                <img src="assets/images/Amitesh.jpg" alt="Dr. Amitesh Rajput" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. Amitesh Rajput</div>
@@ -389,7 +389,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Prakash.jpg" alt="Dr. P. Prakash" class="member-photo">
+                <img src="assets/images/PrakashP.jpg" alt="Dr. P. Prakash" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. P. Prakash</div>
@@ -416,7 +416,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Sandeep.jpg" alt="Dr. Sandeep Gupta" class="member-photo">
+                <img src="assets/images/SandeepGupta.jpg" alt="Dr. Sandeep Gupta" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Dr. Sandeep Gupta</div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
