--- a/committee.html
+++ b/committee.html
@@ -665,7 +665,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/AnandChowdary.jpg" alt="Prof. Anand Shankar Chowdary" class="member-photo">
+                <img src="assets/images/Ananda.jpg" alt="Prof. Anand Shankar Chowdary" class="member-photo">
                 <div class="member-info">
                     <a href="#" class="member-link">
                         <div class="member-name">Prof. Anand Shankar Chowdary</div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
