--- a/committee.html
+++ b/committee.html
@@ -667,7 +667,7 @@
             <div class="member-card">
                 <img src="assets/images/Ananda.jpg" alt="Prof. Anand Shankar Chowdary" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://jadavpuruniversity.in/faculty-profile/ananda-shankar-chowdhury/" class="member-link">
                         <div class="member-name">Prof. Anand Shankar Chowdary</div>
                     </a>
                     <div class="member-affil">Jadavpur University, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
