--- a/committee.html
+++ b/committee.html
@@ -676,7 +676,7 @@
             <div class="member-card">
                 <img src="assets/images/AnoopNambodiri.jpg" alt="Prof. Anoop Nambodiri" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.iiit.ac.in/faculty/anoop-namboodiri/" class="member-link">
                         <div class="member-name">Prof. Anoop Nambodiri</div>
                     </a>
                     <div class="member-affil">IIIT Hyderabad, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
