--- a/committee.html
+++ b/committee.html
@@ -685,7 +685,7 @@
             <div class="member-card">
                 <img src="assets/images/BapiRaju.jpg" alt="Prof. Bapi Raju" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.iiit.ac.in/faculty/bapi-raju-s/" class="member-link">
                         <div class="member-name">Prof. Bapi Raju</div>
                     </a>
                     <div class="member-affil">IIIT Hyderabad, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
