--- a/committee.html
+++ b/committee.html
@@ -692,27 +692,27 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/PhilippTerhorst.jpg" alt="Prof. Philipp Terhörst" class="member-photo">
+                <img src="assets/images/Philipp.jpg" alt="Prof. Philipp Terhörst" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.uni-paderborn.de/en/person/97123" class="member-link">
                         <div class="member-name">Prof. Philipp Terhörst</div>
                     </a>
                     <div class="member-affil">University of Paderborn, Germany </div>
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/DikshaShukla.jpg" alt="Prof. Diksha Shukla" class="member-photo">
+                <img src="assets/images/Diksha.jpg" alt="Prof. Diksha Shukla" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.uwyo.edu/eecs/faculty-staff/faculty/diksha-shukla/index.html" class="member-link">
                         <div class="member-name">Prof. Diksha Shukla</div>
                     </a>
                     <div class="member-affil">Wyoming University, USA </div>
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/RajeshKumar.jpg" alt="Prof. Rajesh Kumar" class="member-photo">
+                <img src="assets/images/rejeshkumar.jpg" alt="Prof. Rajesh Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.bucknell.edu/fac-staff/rajesh-kumar" class="member-link">
                         <div class="member-name">Prof. Rajesh Kumar</div>
                     </a>
                     <div class="member-affil">Bucknell University, USA </div>
@@ -721,16 +721,16 @@
             <div class="member-card">
                 <img src="assets/images/AjitaRattani.jpg" alt="Prof. Ajita Rattani" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://engineering.unt.edu/people/ajita-rattani.html" class="member-link">
                         <div class="member-name">Prof. Ajita Rattani</div>
                     </a>
                     <div class="member-affil">University of North Texas, USA </div>
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/VijayanAsari.jpg" alt="Dr. Vijayan K Asari" class="member-photo">
+                <img src="assets/images/Vijayan.jpg" alt="Dr. Vijayan K Asari" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://udayton.edu/directory/engineering/electrical-and-computer/asari_vijayan.php" class="member-link">
                         <div class="member-name">Dr. Vijayan K Asari</div>
                     </a>
                     <div class="member-affil">University of Dayton, Ohio, USA </div>
@@ -739,16 +739,16 @@
             <div class="member-card">
                 <img src="assets/images/JohnThomas.jpg" alt="Dr. John Thomas" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.rit.edu/directory/jmtiee-john-thomas" class="member-link">
                         <div class="member-name">Dr. John Thomas</div>
                     </a>
                     <div class="member-affil">RIT, USA </div>
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/HauNgo.jpg" alt="Dr. Hau Ngo" class="member-photo">
+                <img src="assets/images/Hau.jpg" alt="Dr. Hau Ngo" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://sites.google.com/site/hautngo/" class="member-link">
                         <div class="member-name">Dr. Hau Ngo</div>
                     </a>
                     <div class="member-affil">US Naval Academy, USA </div>
@@ -757,7 +757,7 @@
             <div class="member-card">
                 <img src="assets/images/MaheshPanicker.jpg" alt="Prof. Mahesh Panicker" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.singaporetech.edu.sg/directory/faculty/mahesh-raveendranatha-panicker" class="member-link">
                         <div class="member-name">Prof. Mahesh Panicker</div>
                     </a>
                     <div class="member-affil">Singapore Institute of Technology </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
