--- a/committee.html
+++ b/committee.html
@@ -433,7 +433,7 @@
             <div class="member-card">
                 <img src="assets/images/Lintu .jpg" alt="Dr. Lintu Rajan" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/926c63fb-5f16-4deb-a771-9b7893cc291a" class="member-link">
                         <div class="member-name">Dr. Lintu Rajan</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India</div>
@@ -442,7 +442,7 @@
             <div class="member-card">
                 <img src="assets/images/Periyasamy .jpg" alt="Dr. C. Periyasamy" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/thematic-centres/campus-networking-centre-cnc/faculty-and-staff/faculty/c93a0ff2-38a4-4df7-acb5-9645c8c4a26a" class="member-link">
                         <div class="member-name">Dr. C. Periyasamy</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -451,7 +451,7 @@
             <div class="member-card">
                 <img src="assets/images/Shyam.jpg" alt="Dr. C. N. Shyam Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/multidiscilplinary-centres/centre-for-continuing-education-and-skill-development/faculty-and-staff/faculty/4c0a5403-3c68-4a4e-9180-1207922eabbe" class="member-link">
                         <div class="member-name">Dr. C. N. Shyam Kumar</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India</div>
@@ -460,7 +460,7 @@
             <div class="member-card">
                 <img src="assets/images/RahulRadhakrishnan .jpg" alt="Dr. Rahul Radhakrishnan" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electrical-engineering/faculty-and-staff/faculty/6578e531-4695-4656-beb4-6ae6fb52695e" class="member-link">
                         <div class="member-name">Dr. Rahul Radhakrishnan</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -469,7 +469,7 @@
             <div class="member-card">
                 <img src="assets/images/JagadeeshVK.jpg" alt="Dr. Jagadeesh V. K." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/15a9a881-3871-4afb-a0ce-3dc7b2b0b66e" class="member-link">
                         <div class="member-name">Dr. Jagadeesh V. K.</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
