--- a/committee.html
+++ b/committee.html
@@ -484,7 +484,7 @@
             <div class="member-card">
                 <img src="assets/images/Ameer.jpg" alt="Dr. Ameer P. M." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/88224dda-7e19-4551-8d10-546e26584cf4" class="member-link">
                         <div class="member-name">Dr. Ameer P. M.</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -493,7 +493,7 @@
             <div class="member-card">
                 <img src="assets/images/Jayakumar.jpg" alt="Dr. Jayakumar E. P." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/6e4d6149-9b13-43eb-9095-1026b56d7eb4" class="member-link">
                         <div class="member-name">Dr. Jayakumar E. P.</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
