--- a/committee.html
+++ b/committee.html
@@ -172,7 +172,7 @@
             <div class="member-card">
                 <img src="assets/images/Sudhish.jpg" alt="Dr. Sudhish N. George" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/77700704-50b0-42cd-965b-38dd5b7171cf" class="member-link">
                         <div class="member-name">Dr. Sudhish N. George</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
