--- a/committee.html
+++ b/committee.html
@@ -241,7 +241,7 @@
             <div class="member-card">
                 <img src="assets/images/Pournami.jpg" alt="Dr. Pournami P. N." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/computer-science-amp-engineering/faculty-and-staff/faculty/f7eef9f3-8a95-40bf-b68e-24b737caec00" class="member-link">
                         <div class="member-name">Dr. Pournami P. N.</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -283,7 +283,7 @@
             <div class="member-card">
                 <img src="assets/images/GopiKrishna.jpg" alt="Dr. Gopi Krishna Saramekala" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/a2a51793-1032-44b0-8445-3569d7cfdbb3" class="member-link">
                         <div class="member-name">Dr. Gopi Krishna Saramekala</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -298,7 +298,7 @@
             <div class="member-card">
                 <img src="assets/images/PraveenSankaran.jpg" alt="Prof. Praveen Sankaran" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/2c3f1028-76d0-4843-af96-b38861ebe554" class="member-link">
                         <div class="member-name">Prof. Praveen Sankaran</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -400,7 +400,7 @@
             <div class="member-card">
                 <img src="assets/images/Sanjay.jpg" alt="Dr. Sanjay Viswanath" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/4dcaf3ed-3000-49fc-b2c2-47d13a330dce" class="member-link">
                         <div class="member-name">Dr. Sanjay Viswanath</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
