--- a/committee.html
+++ b/committee.html
@@ -517,7 +517,7 @@
             <div class="member-card">
                 <img src="assets/images/Bindiya.jpg" alt="Dr. Bindiya T. S." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/department/electronics-amp-communication-engineering/faculty-and-staff/faculty/c2d4a573-c43f-4e3f-a0ba-e1fda8654645" class="member-link">
                         <div class="member-name">Dr. Bindiya T. S.</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
