--- a/committee.html
+++ b/committee.html
@@ -649,7 +649,7 @@
             <div class="member-card">
                 <img src="assets/images/Lijiya.jpg" alt="Dr. Lijiya A" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nitc.ac.in/multidiscilplinary-centres/centre-for-qa-and-enhancement/faculty-and-staff/faculty/bf2c4c95-d0e3-425e-a052-3133c0ebe8de" class="member-link">
                         <div class="member-name">Dr. Lijiya A</div>
                     </a>
                     <div class="member-affil">NIT Calicut, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
