--- a/committee.html
+++ b/committee.html
@@ -163,7 +163,7 @@
             <div class="member-card">
                 <img src="assets/images/Kiran.jpg" alt="Prof. Kiran Raja" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.ntnu.edu/employees/kiran.raja" class="member-link">
                         <div class="member-name">Prof. Kiran Raja</div>
                     </a>
                     <div class="member-affil">NTNU, Norway </div>
@@ -181,7 +181,7 @@
             <div class="member-card">
                 <img src="assets/images/Mohit.jpg" alt="Prof. Mohit Bansal" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://cs.unc.edu/person/mohit-bansal/" class="member-link">
                         <div class="member-name">Prof. Mohit Bansal</div>
                     </a>
                     <div class="member-affil">University of North Carolina, USA </div>
@@ -190,7 +190,7 @@
             <div class="member-card">
                 <img src="assets/images/Gaurav.jpg" alt="Prof. Gaurav Bhatnagar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://iitj.ac.in/People/Profile/76c9e7c9-555e-4bb9-82b9-2f5a0ed9d11e" class="member-link">
                         <div class="member-name">Prof. Gaurav Bhatnagar</div>
                     </a>
                     <div class="member-affil">IIT Jodhpur, India </div>
@@ -205,7 +205,7 @@
             <div class="member-card">
                 <img src="assets/images/Aparajita.jpg" alt="Prof. Aparajita Ojha" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://cse.iiitdmj.ac.in/faculty_page.php?id=aojha@iiitdmj.ac.in" class="member-link">
                         <div class="member-name">Prof. Aparajita Ojha</div>
                     </a>
                     <div class="member-affil">IIITDM Jabalpur, India </div>
@@ -214,7 +214,7 @@
             <div class="member-card">
                 <img src="assets/images/Puneet.jpg" alt="Dr. Puneet Goyal" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://sites.google.com/view/goyalpuneet" class="member-link">
                         <div class="member-name">Dr. Puneet Goyal</div>
                     </a>
                     <div class="member-affil">IIT Ropar, India </div>
@@ -223,7 +223,7 @@
             <div class="member-card">
                 <img src="assets/images/Santosh.jpg" alt="Dr. Santosh Kumar Vipparthi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.iitrpr.ac.in/ee/profile.faculty.php?mail=skvipparthi%40iitrpr.ac.in" class="member-link">
                         <div class="member-name">Dr. Santosh Kumar Vipparthi</div>
                     </a>
                     <div class="member-affil">IIT Ropar, India </div>
@@ -232,7 +232,7 @@
             <div class="member-card">
                 <img src="assets/images/Jagadeesh.jpg" alt="Dr. Jagadeesh Kakarla" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.iiitdm.ac.in/people/faculty/jagadeeshk@iiitdm.ac.in" class="member-link">
                         <div class="member-name">Dr. Jagadeesh Kakarla</div>
                     </a>
                     <div class="member-affil">IIITDM Kancheepuram, India </div>
@@ -256,7 +256,7 @@
             <div class="member-card">
                 <img src="assets/images/Deep.jpg" alt="Dr. Deep Gupta" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://vnit.ac.in/engineering/ece/dr-deep-gupta/" class="member-link">
                         <div class="member-name">Dr. Deep Gupta</div>
                     </a>
                     <div class="member-affil">VNIT Nagpur, India </div>
@@ -265,7 +265,7 @@
             <div class="member-card">
                 <img src="assets/images/Shiv.jpg" alt="Dr. Shiv Ram Dubey" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://it.iiita.ac.in/?pg=facultypage&uid=srdubey" class="member-link">
                         <div class="member-name">Dr. Shiv Ram Dubey</div>
                     </a>
                     <div class="member-affil">IIIT Allahabad, India </div>
@@ -274,7 +274,7 @@
             <div class="member-card">
                 <img src="assets/images/Sony.jpg" alt="Prof. Sony George" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.ntnu.edu/employees/sony.george" class="member-link">
                         <div class="member-name">Prof. Sony George</div>
                     </a>
                     <div class="member-affil">NTNU, Norway </div>
@@ -313,7 +313,7 @@
             <div class="member-card">
                 <img src="assets/images/Sudipta.jpg" alt="Dr. Sudipta Banerjee" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.uwyo.edu/eecs/faculty-staff/faculty/sudipta-banerjee.html" class="member-link">
                         <div class="member-name">Dr. Sudipta Banerjee</div>
                     </a>
                     <div class="member-affil">University of Wyoming, USA </div>
@@ -322,7 +322,7 @@
             <div class="member-card">
                 <img src="assets/images/Chiara.jpg" alt="Prof. Chiara Galdi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.eurecom.fr/en/people/galdi-chiara" class="member-link">
                         <div class="member-name">Prof. Chiara Galdi</div>
                     </a>
                     <div class="member-affil">Eurecom, France </div>
@@ -331,7 +331,7 @@
             <div class="member-card">
                 <img src="assets/images/Marta.jpg" alt="Prof. Marta Gomez-Barrero" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.unibw.de/bioml-en/team/univ-prof-in-dr-marta-gomez-barrero" class="member-link">
                         <div class="member-name">Prof. Marta Gomez-Barrero</div>
                     </a>
                     <div class="member-affil">Universität der Bundeswehr München, Germany </div>
@@ -340,7 +340,7 @@
             <div class="member-card">
                 <img src="assets/images/Abhinav.jpg" alt="Dr. Abhinav Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.iitrpr.ac.in/saide/profile.faculty.php?mail=abhinavk%40iitrpr.ac.in" class="member-link">
                         <div class="member-name">Dr. Abhinav Kumar</div>
                     </a>
                     <div class="member-affil">IIT Ropar, India </div>
@@ -358,7 +358,7 @@
             <div class="member-card">
                 <img src="assets/images/Rama.jpg" alt="Prof. Rama Krishna Sai Gorthi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://old.iittp.ac.in/dr-rama-krishna-sai-subrahmanyam-gorthi" class="member-link">
                         <div class="member-name">Prof. Rama Krishna Sai Gorthi</div>
                     </a>
                     <div class="member-affil">IIT Tirupati, India </div>
@@ -373,7 +373,7 @@
             <div class="member-card">
                 <img src="assets/images/Aditya.jpg" alt="Dr. Aditya Sole" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.ntnu.edu/employees/aditya.sole" class="member-link">
                         <div class="member-name">Dr. Aditya Sole</div>
                     </a>
                     <div class="member-affil">NTNU, Norway </div>
@@ -382,7 +382,7 @@
             <div class="member-card">
                 <img src="assets/images/Amitesh.jpg" alt="Dr. Amitesh Rajput" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nliu.ac.in/dr-amitesh-singh-rajput/" class="member-link">
                         <div class="member-name">Dr. Amitesh Rajput</div>
                     </a>
                     <div class="member-affil">NLIU, Bhopal, India </div>
@@ -391,7 +391,7 @@
             <div class="member-card">
                 <img src="assets/images/PrakashP.jpg" alt="Dr. P. Prakash" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://annauniv.irins.org/profile/117838" class="member-link">
                         <div class="member-name">Dr. P. Prakash</div>
                     </a>
                     <div class="member-affil">MIT Anna University, Chennai, India </div>
@@ -409,7 +409,7 @@
             <div class="member-card">
                 <img src="assets/images/Manisha.jpg" alt="Dr. Manisha Verma" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.iitism.ac.in/faculty-details?faculty=manisha" class="member-link">
                         <div class="member-name">Dr. Manisha Verma</div>
                     </a>
                     <div class="member-affil">IIT (ISM) Dhanbad, India </div>
@@ -418,7 +418,7 @@
             <div class="member-card">
                 <img src="assets/images/SandeepGupta.jpg" alt="Dr. Sandeep Gupta" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://pure.qub.ac.uk/en/persons/sandeep-gupta/" class="member-link">
                         <div class="member-name">Dr. Sandeep Gupta</div>
                     </a>
                     <div class="member-affil">Queen's University Belfast, U.K. </div>
@@ -508,7 +508,7 @@
             <div class="member-card">
                 <img src="assets/images/Rahul.jpg" alt="Dr. Rahul Prasannakumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://scholar.google.pt/citations?user=YbDnCfwAAAAJ&hl=pt-PT" class="member-link">
                         <div class="member-name">Dr. Rahul Prasannakumar</div>
                     </a>
                     <div class="member-affil">Oslo University Hospital (OUH), Norway </div>
@@ -526,7 +526,7 @@
             <div class="member-card">
                 <img src="assets/images/PrakashNair.jpg" alt="Prof. Prakash Nair" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://sctimst.ac.in/People/prakashnair" class="member-link">
                         <div class="member-name">Prof. Prakash Nair</div>
                     </a>
                     <div class="member-affil">SCTIMST, Thiruvananthapuram, India </div>
@@ -541,7 +541,7 @@
             <div class="member-card">
                 <img src="assets/images/Amina.jpg" alt="Dr. Amina Bassit" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://hal.cse.msu.edu/team/amina-bassit/" class="member-link">
                         <div class="member-name">Dr. Amina Bassit</div>
                     </a>
                     <div class="member-affil">Michigan State University, USA </div>
@@ -550,7 +550,7 @@
             <div class="member-card">
                 <img src="assets/images/Chiara.jpg" alt="Prof. Chiara Galdi" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.eurecom.fr/en/people/galdi-chiara" class="member-link">
                         <div class="member-name">Prof. Chiara Galdi</div>
                     </a>
                     <div class="member-affil">Eurecom, France </div>
@@ -559,7 +559,7 @@
             <div class="member-card">
                 <img src="assets/images/Marta.jpg" alt="Prof. Marta Gomez-Barrero" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.unibw.de/bioml-en/team/univ-prof-in-dr-marta-gomez-barrero" class="member-link">
                         <div class="member-name">Prof. Marta Gomez-Barrero</div>
                     </a>
                     <div class="member-affil">Universität der Bundeswehr München, Germany </div>
@@ -568,7 +568,7 @@
             <div class="member-card">
                 <img src="assets/images/Amitesh.jpg" alt="Dr. Amitesh Rajput" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://nliu.ac.in/dr-amitesh-singh-rajput/" class="member-link">
                         <div class="member-name">Dr. Amitesh Rajput</div>
                     </a>
                     <div class="member-affil">NLIU, Bhopal, India</div>
@@ -577,7 +577,7 @@
             <div class="member-card">
                 <img src="assets/images/DeepakKJain.jpg" alt="Dr. Deepak K Jain" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://scholar.google.com/citations?user=QfuuEmcAAAAJ&hl=en" class="member-link">
                         <div class="member-name">Dr. Deepak K Jain</div>
                     </a>
                     <div class="member-affil">Dalian University of Technology, China </div>
@@ -586,7 +586,7 @@
             <div class="member-card">
                 <img src="assets/images/Prashant.jpg" alt="Dr. Prashant Patil" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://iitg.ac.in/iitg_faculty_details?fac=emE0eXp4VEpTLy9CSmVJeVo0TmRxUT09" class="member-link">
                         <div class="member-name">Dr. Prashant Patil</div>
                     </a>
                     <div class="member-affil">IIT Guwahati, India </div>
@@ -595,7 +595,7 @@
             <div class="member-card">
                 <img src="assets/images/Pushpendra.jpg" alt="Dr. Pushpendra Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.manit.ac.in/content/dr-pushpendra-kumar" class="member-link">
                         <div class="member-name">Dr. Pushpendra Kumar</div>
                     </a>
                     <div class="member-affil">MANIT Bhopal, India </div>
@@ -604,7 +604,7 @@
             <div class="member-card">
                 <img src="assets/images/Vivekraj.jpg" alt="Dr. Vivekraj V. K." class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://iiitdwd.ac.in/academics/faculty/?department=cse" class="member-link">
                         <div class="member-name">Dr. Vivekraj V. K.</div>
                     </a>
                     <div class="member-affil">IIT Dharwad, India </div>
@@ -613,7 +613,7 @@
             <div class="member-card">
                 <img src="assets/images/Harkeerat.jpg" alt="Dr. Harkeerat Kaur" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://iitjammu.ac.in/computer_science_engineering/faculty-list/~harkeeratkaur" class="member-link">
                         <div class="member-name">Dr. Harkeerat Kaur</div>
                     </a>
                     <div class="member-affil">IIT Jammu, India </div>
@@ -622,7 +622,7 @@
             <div class="member-card">
                 <img src="assets/images/Kesavadas.jpg" alt="Dr. C. Kesavadas" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://www.sctimst.ac.in/people/kesav" class="member-link">
                         <div class="member-name">Dr. C. Kesavadas</div>
                     </a>
                     <div class="member-affil">SCTIMST, Thiruvananthapuram, India </div>
@@ -631,7 +631,7 @@
             <div class="member-card">
                 <img src="assets/images/Senthil.jpg" alt="Dr. C. M. Senthil Kumar" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://spices.res.in/staff/detail/dr-c-m-senthil-kumar" class="member-link">
                         <div class="member-name">Dr. C. M. Senthil Kumar</div>
                     </a>
                     <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
@@ -640,7 +640,7 @@
             <div class="member-card">
                 <img src="assets/images/IshwaraBhat.jpg" alt="Dr. A. Ishwara Bhat" class="member-photo">
                 <div class="member-info">
-                    <a href="#" class="member-link">
+                    <a href="https://spices.res.in/staff/detail/dr-a-ishwara-bhat" class="member-link">
                         <div class="member-name">Dr. A. Ishwara Bhat</div>
                     </a>
                     <div class="member-affil">ICAR - IISR, Kozhikode, India </div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
