--- a/committee.html
+++ b/committee.html
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="member-card">
-                <img src="assets/images/Mohit.jpg" alt="Prof. Mohit Bansal" class="member-photo">
+                <img src="assets/images/mohitbansal.jpg" alt="Prof. Mohit Bansal" class="member-photo">
                 <div class="member-info">
                     <a href="https://cs.unc.edu/person/mohit-bansal/" class="member-link">
                         <div class="member-name">Prof. Mohit Bansal</div>
@@ -794,6 +794,7 @@
 
 </body>
 </html>
+
 
 
 
